Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-15372

QbsProjectManager: All targets have a trailing '2'

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • Qt Creator 4.0.0-beta1
    • Qt Creator 3.6.0-rc1
    • OSX 10.10, QC 3.6 rc snapshot (82cf0e60fb) based on Qt5.5.1
    • de2c79044c4e8b168d0173b63e8ad4abf07da295

    Description

      Steps to reproduce:

      • open qtcreator.qbs from QC's repository
      • while parsing the project switch to Projects view -> Run Settings
        • all targets are listed correctly
      • wait for parsing having finished
      • switch to Projects view -> Run Settings
        • all targets are listed with a trailing '2' (although there's no other target with the same name without a trailing '2' (or a trailing '1'))

      Note: If you have a second build config and switch between the first and the second you'll get the trailing '2' if the target had no trailing '2' and you're losing the trailing '2' if you had it.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            kandeler Christian Kandeler
            cstenger Christian Stenger
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes