QbsProjectManager: Only update run configs for active target.

Like qmake does. Otherwise, since the unique product names contain the
associated profile, inactive targets get run configurations for products
with the wrong id. These get removed and re-inserted on the next target
switch. The user-visible effect is a suffix "2" alternately appearing
and disappearing on switching kits.

Task-number: QTCREATORBUG-15372
Change-Id: Ib57859103786988d273733680a373a8283295a35
Reviewed-by: Christian Stenger <christian.stenger@theqtcompany.com>
Reviewed-by: Tobias Hunger <tobias.hunger@theqtcompany.com>